# metashape_monte_carlo

./: .gitignore  .gitmodules  README.md  compute_sigma2.py  generate_random_data.py  mc_results.ipynb  mc_results.py  montecarlo.py  montecarlo_batch.py  precision_estimates.py  pyproject.toml  requirements.txt  run_montecarlo.py  run_montecarlo_batch.py
gui_scripts/: calib2colmap.py  export_markers.py  export_selected_images.py  import_markers.py  triangulate_points.py  utils.py
src/: export_to_file.py  from_bundler.py  mc_utils.py  utils.py  workflow.py
src/metashapelib/: __init__.py  export.py  export_to_file.py  msutils.py  project_from_bundler.py  workflow.py
src/metashapelib/montecarlo/: __init__.py  mc_utils.py  montecarlo.py  read_results.py
src/metashapelib/utils/: log.py  utils.py
src/sandbox/: utils_old.py
