[build-system]
requires      = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metashapelib"
version = "0.0.1"
description = ""
readme = "README.md"
authors = [{ name = "Francesco Ioli", email = "francesco.ioli@polimi.it" }]
license = { file = "LICENSE.txt" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = []
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pillow",
    "pandas",
    "opencv-python",
    "tqdm",
    "joblib",
    "open3d",
    "dask",
    "laspy",
    "seaborn",
    "plotly",
]
requires-python = ">=3.8"


[project.optional-dependencies]
dev = ["ruff", "black", "bumpver", "isort", "pip-tools", "pytest", "bumpver", "mkdocs", "mkdocs-material", "mkdocstrings[python]", "pre-commit"]

[project.urls]    
    Homepage = "https://github.com/3DOM-FBK/deep-image-matching"
    Documentation = "https://3dom-fbk.github.io/deep-image-matching/"
    Download = "https://github.com/3DOM-FBK/deep-image-matching"
    "Source Code" = "https://github.com/3DOM-FBK/deep-image-matching"

[tool.pytest.ini_options]
  addopts = [
      "--import-mode=importlib",
  ]
    
[tool.bumpver]
  current_version = "1.0.0"
  version_pattern = "MAJOR.MINOR.PATCH"
  commit_message = "bump version {old_version} -> {new_version}"
  commit = true
  tag = false
  push = false

  [tool.bumpver.file_patterns]
    "pyproject.toml" = [
        'current_version = "{version}"', 
        'version = "{version}"'
    ]
    "src/metashapelib/__init__.py" = [
        "{version}"
    ]

[tool.isort]
  profile = "black"

[tool.ruff]
  line-length = 120

  [tool.ruff.lint]
    select = ["E9","F63","F7","F82"]
    ignore = ["E501"]

  [tool.ruff.lint.per-file-ignores]
    "*/__init__.py" = ["F401", "F403"] # Allow unused imports and star imports
    "src/metashapelib/__init__.py" = ["I001"] # Allow unsorted imports